--- a/Desafio 5/views/form-products.hbs
+++ b/Desafio 5/views/form-products.hbs
@@ -1,6 +1,8 @@
-<form action="/api/productos" method="post"> 
-    <input type="text" name="title" placeholder="title" required>
-    <input type="number" name="price" placeholder="price" required>
-    <input type="text" name="thumbnail" placeholder="thumbnail" required>
-    <input type="submit" value="Agregar">
+<form action="/productos" method="post">
+    <input type="text" name="title" placeholder="Title" />
+    <input type="text" name="price" placeholder="Price" />
+    <input type="text" name="thumbnail" placeholder="Thumbnail" />
+    <button> Enviar! </button>
 </form>
+
+<a href="/productos"><button>Volver al formulario de carga</button></a>
