--- a/Desafio 5/views/layouts/main.hbs
+++ b/Desafio 5/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ingresar productos</h1>
-    {{body}}
+    <h1>Desafio 5</h1>
+    {{{body}}}
 </body>
 </html>
