--- a/DesafioClase22/public/views/products-table.hbs
+++ b/DesafioClase22/public/views/products-table.hbs
@@ -1,23 +1,23 @@
-<h3>Lista de Productos</h3>
+<h3 class="title">Lista de Productos</h3>
+{{#if products.length}}
+<table class="product-list">
+    <tr>
+        <th>Nombre</th>
+        <th>Precio</th>
+        <th>Stock</th>
+        <th>Foto</th>
+    </tr>
+    {{#each products}}
+    <tr>
+        <td>{{this.nombre}}</td>
+        <td>${{this.precio}}</td>
+        <td>{{this.stock}}</td>
+        <td><img width="48" src={{this.foto}} alt="image"></td>
+    </tr>
+    {{/each}}
+</table>
+{{else}}
 <div>
-    {{#if products.length}}
-    <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Precio</th>
-            <th>Foto</th>
-        </tr>
-        {{#each products}}
-        <tr>
-            <td>{{this.title}}</td>
-            <td>${{this.price}}</td>
-            <td><img width="48" src={{this.thumbnail}} alt="image"></td>
-        </tr>
-        {{/each}}
-    </table>
-    {{else}}
-    <div>
-        No hay productos
-    </div>
-    {{/if}}
+    No hay productos
 </div>
+{{/if}}
