--- a/Desafio_Clase_26/public/view/home.hbs
+++ b/Desafio_Clase_26/public/view/home.hbs
@@ -13,7 +13,7 @@
 
     <section>
         <h2 class="text-primary">Ingrese producto</h2>
-        {{> form method='POST' action='/productos' }}
+        {{> form metodo='POST' action='/productos' }}
     </section>
 
     <section class="mt-5">
