--- a/Desafio_Clase_26/public/view/home.hbs
+++ b/Desafio_Clase_26/public/view/home.hbs
@@ -21,6 +21,7 @@
         {{#unless productos}}
         <h4 class="text-bg-danger p-3">no se encontraron datos</h4>
         {{else}}
+        <h1>{{productos.producto}}</h1>
         <table class="table table-dark">
             <thead>
                 <tr class="text-warning">
